Fixed sidebar investment spacing | Using new padded balance

--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -14,7 +14,7 @@
   .navigation-type {
     margin-top: 35px;
   }
-  .Currency-type {
+  .currency-type {
     margin-top: 25px;
   }
   .other-containt {
